# StackControl

./: Cargo.toml  LICENSE  README.MD  bundle.js  documentation_v1.json
.github/ISSUE_TEMPLATE/: feature_request.md  language-bug.md
.github/workflows/: documentation.yml  site.yml
stack-control/: Cargo.toml
stack-control-doc/: Cargo.toml
stack-control-doc/src/: main.rs
stack-control-shell/: Cargo.toml
stack-control-shell/src/: main.rs
stack-control-site/: README.MD  index.html  package.json  tsconfig.json  webpack.config.ts
stack-control-site/resources/: .gitignore
stack-control-site/src/: App.css  App.tsx  ValueState.ts  main.css  main.tsx
stack-control-site/src/Components/Button/: Button.css  Button.tsx
stack-control-site/src/Components/CheckBox/: CheckBox.css  CheckBox.tsx
stack-control-site/src/Components/CodeInputField/: CodeInputField.css  CodeInputField.tsx
stack-control-site/src/Components/CommandDescription/: CommandDescription.css  CommandDescription.tsx
stack-control-site/src/Components/StackView/: StackView.css  StackView.tsx
stack-control-site/src/utils/: cls.ts
stack-control-wasm/: Cargo.toml
stack-control-wasm/src/: lib.rs
stack-control/src/: lib.rs
stack-control/src/bytecode/: command.rs  commands.rs
stack-control/src/bytecode/command/: core.rs  math.rs  stack_manipulators.rs
stack-control/src/compiletime/: command_map.rs  compiler.rs  lexer.rs  mod.rs
stack-control/src/runtime/: mod.rs  stack.rs  value.rs
stack-control/src/utils/: execution.rs  mod.rs  reference_container.rs
(+5 files in other folders)
