[package]
name = "stack-control-wasm"
version = "0.2.0.0"
edition = "2024"

[features]
default = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"
stack-control = {path = "../stack-control"}
console_error_panic_hook = { version = "0.1.7", optional = true }
itertools = "0.14.0"

[profile.release]
lto = true